# agent-kitchen

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  IMPROVEMENT_REPORT.md  README.md  package-lock.json  package.json  pyproject.toml
0a/6b04c518b8/: metadata.json
0a/6b04c518b8/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
13/24ae7ceac6/: metadata.json
13/24ae7ceac6/0/: metadata.json
13/24ae7ceac6/1/: metadata.json
14/f227290eee/: metadata.json
14/f227290eee/0/: content_hash.txt  metadata.json  prompt.txt
14/f227290eee/1/: metadata.json
1e/4366c1b95e/: metadata.json
1e/4366c1b95e/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
1e/4366c1b95e/1/: content_hash.txt  full.jsonl  metadata.json
24/ae94264e7b/: metadata.json
24/ae94264e7b/0/: metadata.json
24/ae94264e7b/1/: metadata.json
25/c5591283dc/: metadata.json
25/c5591283dc/0/: content_hash.txt  metadata.json  prompt.txt
26/aa5b3e00e0/: metadata.json
26/aa5b3e00e0/0/: metadata.json  prompt.txt
26/aa5b3e00e0/1/: metadata.json
27/3346bf9052/: metadata.json
27/3346bf9052/0/: content_hash.txt  full.jsonl  (+1 more)
28/06bd500573/: metadata.json
28/34f326f39f/: metadata.json
29/e32c9481a1/: metadata.json
2a/b94796802a/: metadata.json
35/e8df5b77b8/: metadata.json
3a/bab45f55cc/: metadata.json
3f/ec03bff8a9/: metadata.json
42/7dd6482daf/: metadata.json
43/4f4da6069d/: metadata.json
48/7f471f5451/: metadata.json
4c/66500730b5/: metadata.json
4c/dc1a0e850f/: metadata.json
4d/60acbc52fc/: metadata.json
54/5cf4d40de2/: metadata.json
55/6d9862e14f/: metadata.json
57/00197c2202/: metadata.json
57/9705a01e48/: metadata.json
5a/13b203c791/: metadata.json
5e/c26e633c34/: metadata.json
5f/6515d63a91/: metadata.json
61/1ade8795ae/: metadata.json
63/534feb5c8f/: metadata.json
67/cd158debf7/: metadata.json
6d/ca536065d5/: metadata.json
74/92483cc127/: metadata.json
75/bb041414d3/: metadata.json
7c/dfe3ad37c0/: metadata.json
8d/5c6c7334d3/: metadata.json
8e/4d016f8da2/: metadata.json
91/935a4c090a/: metadata.json
92/518b4e62b3/: metadata.json
94/433977ad3a/: metadata.json
a4/18f939b15e/: metadata.json
aa/826125ba51/: metadata.json
aa/c62969ac56/: metadata.json
ad/117d25e5aa/: metadata.json
b1/b660bdcf22/: metadata.json
b6/2804aed8e0/: metadata.json
b8/da02d26e9d/: metadata.json
bb/6e3e7320df/: metadata.json
ca/84c86e49c3/: metadata.json
cd/5c0a849ad1/: metadata.json
cf/0d4e9e71b7/: metadata.json
d2/6696267349/: metadata.json
d4/cdd976bc88/: metadata.json
de/624bfd30e6/: metadata.json
docs/: CNAME  design.md  index.html  pitch.html  rich-chat-view-design.md  session-formats.md
e0/718a0f913b/: metadata.json
e0/be1a23cda4/: metadata.json
e7/a269c48d2f/: metadata.json
e8/3819c0dd19/: metadata.json
ee/8880c2e421/: metadata.json
f0/28f61a88eb/: metadata.json
f1/ae1c4e4730/: metadata.json
f2/a72da9647f/: metadata.json
ff/3f88f0c063/: metadata.json
src/agent_kitchen/: __init__.py  acp_bridge.py  cache.py  cli.py  config.py  git_status.py  grouping.py  indexer.py  llm.py  models.py  parsing.py  scanner.py  server.py  summarizer.py  timeline.py
static/: app.js  style.css
tests/: conftest.py  test_acp_lifecycle.py  test_cache.py  test_chat.mjs  test_cli.py  test_codex_scanner.py  test_config.py  test_error_handling.py  test_git_status.py  test_grouping.py  test_image_paste.py  test_indexer.py  test_llm_summarizer.py  test_models.py  test_scanner.py  test_server.py  test_summarizer.py  test_timeline.py
(+284 files in other folders)
