[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-kitchen"
version = "0.1.0"
description = "Dashboard for monitoring AI coding agent sessions across Claude Code and Codex CLI"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "claude-agent-sdk",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pre-commit", "ruff"]

[project.scripts]
agent-kitchen = "agent_kitchen.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["agent_kitchen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
